test/core/errors/choice_types_error/zs/compound_selector_error.zs
package compound_selector_error;

struct CompoundSelector
{
    int32 value;
};

choice CompoundSelectorChoice(CompoundSelector selector) on selector
{
    default:
        int8 defaultChoice;
};
